# Acorn

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml
benchmarks/: main_bench.cpp
dev/bench/: data.js
include/: component_pool.hpp  entity_manager.hpp  exclude_view.hpp  view.hpp  world.hpp
src/: acorn_assert.hpp  component_pool.hpp  entity.hpp  entity_manager.hpp  view.hpp  world.hpp
tests/: component_pool_test.cpp  entity_manager_test.cpp  entity_test.cpp  exclude_view_test.cpp  view_test.cpp  world_test.cpp
